--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {"data": {
-	"api_key" : "41272f7fe7d341968fd872e9af7bbf6c",
+	"api_key" : "your news API key",
 	"local_location" : "Exeter",
 	"local_location_type" : "ltla",
 	"national_location" : "England",
